New genom option:  -a --------------------- With this option genom generates only the API libraries, not the module server.
Usefull in 2 main cases :
. for modules, like genPos, that are only used to define common structures.
. when one need only the API of a module for another module
  (without the module itself, eg, pilo, sick).

New .gen field:  codels_requires
--------------------------------
Allows to declare packages required only by the codel part (ie, server
part) of the module.

From now the field "requires" should be used only for packages required
by the API part (.gen file), and possibly the extra libraries provided
with the module (EXTRA_SUBDIRS and EXTRA_PKGCONFIG in configure.ac.user).

--- a/canvas/Makefile.top.in
+++ b/canvas/Makefile.top.in
@@ -51,7 +51,9 @@ INSTALL=	@INSTALL@
 
 include $(top_builddir)/config.mk
 
-SUBDIRS= $(serverdir) @EXTRA_SUBDIRS@ $(codelsdir)
+SUBDIRS= \
+	$(serverdir) @EXTRA_SUBDIRS@ \
+$genServer$	$(codelsdir)
 
 config_files = \
 	Makefile \
