42. Add lang keyword in module declaration. Supported options are `lang: c'      (default) and `lang: c++'. Old syntax `use_cxx: 1' supported but      deprecated. Generate codel files with proper extension (.cc for c++).

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -46,7 +46,7 @@ datadir=	@datadir@/modules
 
 # --- Programs ----------------------------------------------------------
 
-USE_CXX=	@USE_CXX@
+LANG_CXX=	@LANG_CXX@
 
 CPP=		@CPP@
 PURIFY=		
@@ -57,7 +57,7 @@ MKINSTALLDIRS=  $(top_srcdir)/autoconf/mkinstalldirs
 LIBTOOL=        @LIBTOOL@ 
 CC=		@CC@
 LTCC=           $(LIBTOOL) --mode=compile $(CC)
-ifeq ($(USE_CXX),1)
+ifeq ($(LANG_CXX),yes)
 CXX=		@CXX@
 LTCXX=		$(LIBTOOL) --mode=compile $(CXX)
 endif
