Add vpath for cc files.

--- a/canvas/codels/Makefile.in
+++ b/canvas/codels/Makefile.in
@@ -39,6 +39,7 @@ builddir=       @builddir@
 
 INSTALL=  	@INSTALL@
 vpath %.c  	$(srcdir)
+vpath %.cc  	$(srcdir)
 
 include $(top_builddir)/config.mk
 
