--- a/canvas/autoconf/module-oprs.pc.in
+++ b/canvas/autoconf/module-oprs.pc.in
@@ -7,6 +7,6 @@ includedir=@includedir@/$pkgname$
 Name: $pkgname$-oprs
 Description: $module$ Genom module
 Version: @PACKAGE_VERSION@
-Requires: genom >= $genomMajor$.$genomMinor$ $require$
+Requires: genom >= $genomVersion$ $require$
 Libs: -L${libdir} -l$module$Client -L${oprslibdir} -l$module$Openprs
 Cflags: -I${includedir}
