Let genom comment out unused variable definitions in generated config.mk

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -124,14 +124,14 @@ KERNEL_INC=	@KERNEL_INC@
 
 XENO_CONFIG=	@XENO_CONFIG@
 
-TCL_CPPFLAGS=	@TCL_CPPFLAGS@
-TCL_LDFLAGS=	@TCL_LDFLAGS@ @TCL_LIB_FLAG@ @TCL_LIBS@
+$genTcl$TCL_CPPFLAGS=	@TCL_CPPFLAGS@
+$genTcl$TCL_LDFLAGS=	@TCL_LDFLAGS@ @TCL_LIB_FLAG@ @TCL_LIBS@
 
-TRANSGEN_CFLAGS = @TRANSGEN_CFLAGS@
-TRANSGEN_LIBS = @TRANSGEN_LIBS@
+$genOpenprs$TRANSGEN_CFLAGS = @TRANSGEN_CFLAGS@
+$genOpenprs$TRANSGEN_LIBS = @TRANSGEN_LIBS@
 
-OPENPRS_CFLAGS  = @OPENPRS_CFLAGS@
-OPENPRS_LIBS    = @OPENPRS_LIBS@
+$genOpenprs$OPENPRS_CFLAGS  = @OPENPRS_CFLAGS@
+$genOpenprs$OPENPRS_LIBS    = @OPENPRS_LIBS@
 
 GENOM_CFLAGS=	@GENOM_CFLAGS@
 GENOM_LIBS=	@GENOM_LIBS@
