43. Use g++ as the linker of modules declared with lang: "c++".

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -62,7 +62,11 @@ CXX=		@CXX@
 LTCXX=		$(LIBTOOL) --mode=compile $(CXX)
 endif
 
+ifeq ($(LANG_CXX),yes)
+LTLD=           $(LIBTOOL) --mode=link $(PURIFY) $(CXX)
+else
 LTLD=           $(LIBTOOL) --mode=link $(PURIFY) $(CC)
+endif
 LTRM=           $(LIBTOOL) --mode=clean rm -f
 LTINSTALL=	$(LIBTOOL) --mode=install $(INSTALL)
 
