Make check_aclocal_version ork with aclocal 1.10 by matching only major and minor version numbers, since the revision number is unused anyway.

--- a/canvas/autogen.in
+++ b/canvas/autogen.in
@@ -9,8 +9,7 @@ sub check_aclocal_version {
     my @version = `aclocal --version`;
 
     my $version_line = shift @version;
-    if (($version_line !~ /^aclocal \(GNU automake\) (\d+)\.(\d+)\.\d+$/)
-        && ($version_line !~ /^aclocal \(GNU automake\) (\d+)\.(\d+)-p\d$/)) 
+    if ($version_line !~ /^aclocal \(GNU automake\) (\d+)\.(\d+)/) 
     {
         print <<EOF;
 You don't seem to have a valid version of aclocal. I was expecting
