Added a CODEL_LIB variable, in config.mk.in, that contains all the *_LIBS pkgconfig variables from the codel_requires field, so that the module gets linked with the indicated libraries automatically. The packages from the 'require' field are already linked with the server library.
The GENOM_INCLUDE already contains the corresponding *_CFLAGS variables
because the parser might need it. This is weird because codels_requires
sounds like something that only the codels might require (sara?).

This fixes https://softs.laas.fr/bugzilla/show_bug.cgi?id=38

--- a/canvas/autoconf/config.mk.in
+++ b/canvas/autoconf/config.mk.in
@@ -101,6 +101,9 @@ $genomPackages$
 SERVERS_CLIENT_LIB=  $serverLibs$
 SERVERS_ENDIAN_LIB=  $(SERVERS_CLIENT_LIB)
 
+CODEL_LIB=$codelLibs$
+
+
 # --- Flags -------------------------------------------------------------
 
 OSAPI?=		@OSAPI@
